RESOLVED FIXED241460
REGRESSION(251416@main): Broke GTK...
https://bugs.webkit.org/show_bug.cgi?id=241460
Summary REGRESSION(251416@main): Broke GTK...
Philippe Normand
Reported 2022-06-09 04:54:59 PDT
In file included from /app/webkit/WebKitBuild/Release/WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-44.cpp:6: /app/webkit/Source/WebCore/platform/graphics/gtk/SystemFontDatabaseGTK.cpp:57:115: error: non-constant-expression cannot be narrowed from type 'int' to 'float' in initializer list [-Wc++11-narrowing] SystemFontShorthandInfo result { AtomString::fromLatin1(pango_font_description_get_family(pangoDescription)), size, normalWeightValue() }; ^~~~ /app/webkit/Source/WebCore/platform/graphics/gtk/SystemFontDatabaseGTK.cpp:57:115: note: insert an explicit cast to silence this issue SystemFontShorthandInfo result { AtomString::fromLatin1(pango_font_description_get_family(pangoDescription)), size, normalWeightValue() }; ^~~~ static_cast<float>( ) /app/webkit/Source/WebCore/platform/graphics/gtk/SystemFontDatabaseGTK.cpp:36:72: warning: unused parameter 'fontShorthand' [-Wunused-parameter] auto SystemFontDatabase::platformSystemFontShorthandInfo(FontShorthand fontShorthand) -> SystemFontShorthandInfo ^ 1 warning and 1 error generated.
Attachments
Philippe Normand
Comment 1 2022-06-09 05:02:00 PDT
EWS
Comment 2 2022-06-09 05:06:24 PDT
Committed r295417 (251423@main): <https://commits.webkit.org/251423@main> Reviewed commits have been landed. Closing PR #1413 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.