REGRESSION(251416@main): Broke GTK... https://bugs.webkit.org/show_bug.cgi?id=241460

Patch by Philippe Normand <philn@igalia.com> on 2022-06-09
Unreviewed, fix GTK build.

* Source/WebCore/platform/graphics/gtk/SystemFontDatabaseGTK.cpp:
(WebCore::SystemFontDatabase::platformSystemFontShorthandInfo):

Canonical link: https://commits.webkit.org/251423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295417 268f45cc-cd09-0410-ab3c-d52691b4dbfc